# mixpanel-convert

./: LICENSE  mixpanel-convert.cabal
app/: Main.hs
src/Mixpanel/: Convert.hs
test/Mixpanel/: ConvertSpec.hs
